--- a/portainer/stacks/postfix/docker-compose.yml
+++ b/portainer/stacks/postfix/docker-compose.yml
@@ -6,11 +6,13 @@ services:
     environment:
       - HOSTNAME=postfix
       - RELAYHOST=smtp.gmail.com:587
-      - POSTFIX_mynetworks=127.0.0.0/8
+      - POSTFIX_mynetworks=127.0.0.0/8 10.0.0.0/8 172.16.0.0/12 192.168.0.0/16
       - RELAYHOST_USERNAME=${RELAYHOST_USERNAME}
       - RELAYHOST_PASSWORD=${RELAYHOST_PASSWORD}
       - ALLOWED_SENDER_DOMAINS=${ALLOWED_SENDER_DOMAINS}
       - SMTPD_SASL_USERS=${SMTPD_SASL_USERS}
+      - POSTFIX_smtpd_sender_restrictions=permit_sasl_authenticated,reject
+      - POSTFIX_smtpd_relay_restrictions=permit_sasl_authenticated,reject
     ports:
       - "1587:587"
     networks:
