enable TLS for postfix relay

--- a/portainer/stacks/postfix/docker-compose.yml
+++ b/portainer/stacks/postfix/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       - HOSTNAME=postfix
       - RELAYHOST=smtp.gmail.com:587
-      - POSTFIX_mynetworks=127.0.0.0/8 10.0.0.0/8 172.16.0.0/12 192.168.0.0/16
+      - POSTFIX_mynetworks=0.0.0.0/0
       - RELAYHOST_USERNAME=${RELAYHOST_USERNAME}
       - RELAYHOST_PASSWORD=${RELAYHOST_PASSWORD}
       - ALLOWED_SENDER_DOMAINS=${ALLOWED_SENDER_DOMAINS}
