--- a/portainer/stacks/postfix/docker-compose.yml
+++ b/portainer/stacks/postfix/docker-compose.yml
@@ -5,16 +5,20 @@ services:
     restart: unless-stopped
     environment:
       - HOSTNAME=postfix
-      - RELAYHOST=smtp.gmail.com:587
+      - RELAYHOST=[smtp.gmail.com]:587
       - POSTFIX_mynetworks=0.0.0.0/0
       - RELAYHOST_USERNAME=${RELAYHOST_USERNAME}
-      - RELAYHOST_PASSWORD=${RELAYHOST_PASSWORD}
       - ALLOWED_SENDER_DOMAINS=${ALLOWED_SENDER_DOMAINS}
       - SMTPD_SASL_USERS=${SMTPD_SASL_USERS}
       - POSTFIX_smtpd_sender_restrictions=permit_sasl_authenticated,reject
       - POSTFIX_smtpd_relay_restrictions=permit_sasl_authenticated,reject
       - POSTFIX_smtpd_tls_security_level=may
       - POSTFIX_smtpd_tls_auth_only=yes
+      - POSTFIX_smtp_tls_security_level=encrypt
+      - XOAUTH2_CLIENT_ID=${XOAUTH2_CLIENT_ID}
+      - XOAUTH2_SECRET=${XOAUTH2_SECRET}
+      - XOAUTH2_INITIAL_ACCESS_TOKEN=${XOAUTH2_INITIAL_ACCESS_TOKEN}
+      - XOAUTH2_INITIAL_REFRESH_TOKEN=${XOAUTH2_INITIAL_REFRESH_TOKEN}
     ports:
       - "1587:587"
     networks:
