enable TLS for postfix relay

--- a/portainer/stacks/vaultwarden/docker-compose.yml
+++ b/portainer/stacks/vaultwarden/docker-compose.yml
@@ -10,10 +10,12 @@ services:
       DOMAIN: ${DOMAIN}
       SMTP_HOST: ${SMTP_HOST}
       SMTP_PORT: ${SMTP_PORT}
-      SMTP_SECURITY: "off"
+      SMTP_SECURITY: "starttls"
       SMTP_FROM: ${SMTP_FROM}
       SMTP_USERNAME: ${SMTP_USERNAME}
       SMTP_PASSWORD: ${SMTP_PASSWORD}
+      SMTP_ACCEPT_INVALID_CERTS: "true"
+      SMTP_ACCEPT_INVALID_HOSTNAMES: "true"
       INSTALLATION_ID: ${INSTALLATION_ID}
       INSTALLATION_KEY: ${INSTALLATION_KEY}
       YUBICO_CLIENT_ID: ${YUBICO_CLIENT_ID}
