--- a/portainer/stacks/certbot/docker-compose.yml
+++ b/portainer/stacks/certbot/docker-compose.yml
@@ -9,11 +9,14 @@ services:
       - /volume2/docker/certbot/volumes/cloudflare.ini:/cloudflare.ini:ro
     environment:
       TZ: "Europe/Lisbon"
-    command: >
-      certonly
-      --dns-cloudflare
-      --dns-cloudflare-credentials /cloudflare.ini
-      -d ${CERT_DOMAIN}
-      -d *.${CERT_DOMAIN}
-      --agree-tos
-      --non-interactive
+      DOMAIN: ${DOMAIN}
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        certbot certonly \
+          --dns-cloudflare \
+          --dns-cloudflare-credentials /cloudflare.ini \
+          -d $$DOMAIN \
+          -d *.$$DOMAIN \
+          --agree-tos \
+          --non-interactive
