--- a/portainer/stacks/netboot/docker-compose.yml
+++ b/portainer/stacks/netboot/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   netboot:
     container_name: netboot
-    image: ghcr.io/netbootxyz/netboot.xyz:3.0.0
+    image: ghcr.io/netbootxyz/netbootxyz:3.0.0
     restart: unless-stopped
     environment:
       TZ: "Europe/Lisbon"
