--- a/portainer/stacks/netboot/docker-compose.yml
+++ b/portainer/stacks/netboot/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   netboot:
     container_name: netbootxyz
-    image: ghcr.io/netbootxyz/netbootxyz:3.0.0
+    image: ghcr.io/netbootxyz/netbootxyz:0.7.6-nbxyz10
     restart: unless-stopped
     environment:
       TZ: "Europe/Lisbon"
