--- a/portainer/stacks/netboot/docker-compose.yml
+++ b/portainer/stacks/netboot/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     environment:
       WEB_APP_PORT: "3001"
       NGINX_PORT: "3002"
+      PUID: "0"
+      PGID: "0"
     volumes:
       - /volume2/docker/netbootxyz/volumes/config:/config
       - /volume2/docker/netbootxyz/volumes/assets:/assets
