--- a/portainer/stacks/netboot/docker-compose.yml
+++ b/portainer/stacks/netboot/docker-compose.yml
@@ -1,13 +1,11 @@
 services:
   netboot:
     container_name: netbootxyz
-    image: netbootxyz/netbootxyz:0.7.6-nbxyz10
+    image: lscr.io/linuxserver/netbootxyz:v0.7.6-LS222
     restart: unless-stopped
     environment:
       WEB_APP_PORT: "3001"
       NGINX_PORT: "3002"
-      PUID: "1000"
-      PGID: "100"
     volumes:
       - /volume2/docker/netbootxyz/volumes/config:/config
       - /volume2/docker/netbootxyz/volumes/assets:/assets
