--- a/portainer/stacks/netboot/docker-compose.yml
+++ b/portainer/stacks/netboot/docker-compose.yml
@@ -1,14 +1,15 @@
 services:
   netboot:
     container_name: netbootxyz
-    image: lscr.io/linuxserver/netbootxyz:0.7.6-ls222
+    image: ghcr.io/netbootxyz/netbootxyz:0.7.6-nbxyz10
     restart: unless-stopped
     environment:
       WEB_APP_PORT: "3001"
       NGINX_PORT: "3002"
+      TFTPD_OPTS: "--tftp-single-port"
     volumes:
-      - /volume2/docker/netbootxyz/volumes/config:/config
-      - /volume2/docker/netbootxyz/volumes/assets:/assets
+      - /volume2/docker/netboot/volumes/config:/config
+      - /volume2/docker/netboot/volumes/assets:/assets
     ports:
       - "3001:3001"
       - "69:69/udp"
