--- a/portainer/stacks/certbot/docker-compose.yml
+++ b/portainer/stacks/certbot/docker-compose.yml
@@ -27,3 +27,10 @@ services:
           sleep 12h
           certbot renew --quiet
         done
+        
+    networks:
+      - prod_net
+
+networks:
+  prod_net:
+    external: true
