--- a/portainer/stacks/certbot/docker-compose.yml
+++ b/portainer/stacks/certbot/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   certbot:
     container_name: certbot
-    image: certbot/dns-cloudflare:latest
+    image: certbot/dns-cloudflare:v5.3.0
     restart: unless-stopped
     volumes:
       - /volume2/docker/certbot/volumes/letsencrypt:/etc/letsencrypt
@@ -27,7 +27,7 @@ services:
           sleep 12h
           certbot renew --quiet
         done
-        
+
     networks:
       - prod_net
 
