move omni behind cf

--- a/portainer/stacks/omni/docker-compose.yml
+++ b/portainer/stacks/omni/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       --bind-addr=0.0.0.0:2443
       --machine-api-bind-addr=0.0.0.0:8090
       --k8s-proxy-bind-addr=0.0.0.0:8100
-      --advertised-api-url=https://${OMNI_DOMAIN}:443
+      --advertised-api-url=https://${OMNI_DOMAIN}
       --siderolink-api-advertised-url=https://${API_DOMAIN}:8090
       --advertised-kubernetes-proxy-url=https://${API_DOMAIN}:8100
       --siderolink-wireguard-advertised-addr=192.168.202.1:50180
