create readmes and omni template

--- a/.github/workflows/push-secrets.yml
+++ b/.github/workflows/push-secrets.yml
@@ -94,6 +94,9 @@ jobs:
         
         # Trigger deploy-stacks workflow
         gh workflow run deploy-stacks.yml
+        
+        # Trigger sync-omni-templates workflow
+        gh workflow run sync-omni-templates.yml
 
     - name: Cleanup
       if: always()
