move nuc1 into new cluster

--- a/kubernetes/omni/templates/prod-cluster.yaml
+++ b/kubernetes/omni/templates/prod-cluster.yaml
@@ -31,8 +31,6 @@ patches:
 ---
 kind: ControlPlane
 machines:
-  # TODO: Replace with actual machine UUIDs after registering NUCs with Omni
-  # Run `omnictl get machines` to find the UUIDs
   - b2b24080-3eaf-11ef-a623-226974e21f00
   - 00000000-0000-0000-0000-000000000002
   - 00000000-0000-0000-0000-000000000003
@@ -63,6 +61,7 @@ patches:
                 - rshared
                 - rw
         network:
+          $patch: replace
           hostname: nuc-01
           interfaces:
             - interface: enp1s0
@@ -103,6 +102,7 @@ patches:
                 - rshared
                 - rw
         network:
+          $patch: replace
           hostname: nuc-02
           interfaces:
             - interface: enp1s0
@@ -143,6 +143,7 @@ patches:
                 - rshared
                 - rw
         network:
+          $patch: replace
           hostname: nuc-03
           interfaces:
             - interface: enp1s0
