--- a/.github/workflows/sync-omni-templates.yml
+++ b/.github/workflows/sync-omni-templates.yml
@@ -49,22 +49,29 @@ jobs:
             # Manual dispatch with specific template
             TEMPLATES='["${{ github.event.inputs.template }}"]'
           elif [ "${{ github.event_name }}" == "pull_request" ] || [ "${{ github.event_name }}" == "push" ]; then
-            # Get changed template files
+            # Get changed template files (only root-level YAML files, not patches/manifests)
             if git rev-parse --verify HEAD^ >/dev/null 2>&1; then
-              CHANGED=$(git diff --name-only HEAD^ HEAD -- 'kubernetes/omni/templates/*.yaml' | xargs -n1 basename 2>/dev/null || true)
+              # Check if any files in templates directory changed (including patches/manifests)
+              CHANGED_FILES=$(git diff --name-only HEAD^ HEAD -- 'kubernetes/omni/templates/')
+              if [ -n "$CHANGED_FILES" ]; then
+                # If patches or manifests changed, sync all root templates
+                CHANGED=$(find kubernetes/omni/templates -maxdepth 1 -name "*.yaml" -type f | xargs -n1 basename 2>/dev/null || true)
+              else
+                CHANGED=""
+              fi
             else
-              CHANGED=$(find kubernetes/omni/templates -name "*.yaml" -type f | xargs -n1 basename 2>/dev/null || true)
+              CHANGED=$(find kubernetes/omni/templates -maxdepth 1 -name "*.yaml" -type f | xargs -n1 basename 2>/dev/null || true)
             fi
             
             if [ -z "$CHANGED" ]; then
-              # No specific changes, sync all templates
-              CHANGED=$(find kubernetes/omni/templates -name "*.yaml" -type f | xargs -n1 basename 2>/dev/null || true)
+              # No specific changes, sync all root-level templates
+              CHANGED=$(find kubernetes/omni/templates -maxdepth 1 -name "*.yaml" -type f | xargs -n1 basename 2>/dev/null || true)
             fi
             
             TEMPLATES=$(echo "$CHANGED" | jq -R -s -c 'split("\n") | map(select(length > 0))')
           else
-            # workflow_dispatch without specific template - sync all
-            TEMPLATES=$(find kubernetes/omni/templates -name "*.yaml" -type f | xargs -n1 basename | jq -R -s -c 'split("\n") | map(select(length > 0))')
+            # workflow_dispatch without specific template - sync all root-level templates
+            TEMPLATES=$(find kubernetes/omni/templates -maxdepth 1 -name "*.yaml" -type f | xargs -n1 basename | jq -R -s -c 'split("\n") | map(select(length > 0))')
           fi
           
           echo "Templates to process: $TEMPLATES"
@@ -72,8 +79,13 @@ jobs:
 
       - name: Process templates with secrets
         run: |
-          mkdir -p /tmp/processed-templates
+          mkdir -p /tmp/processed-templates/patches
           TEMPLATES='${{ steps.detect.outputs.templates }}'
+          
+          # Copy patches directory (these don't need TLD substitution)
+          if [ -d "kubernetes/omni/templates/patches" ]; then
+            cp -r kubernetes/omni/templates/patches/* /tmp/processed-templates/patches/ 2>/dev/null || true
+          fi
           
           for template in $(echo "$TEMPLATES" | jq -r '.[]'); do
             echo "Processing kubernetes/omni/templates/$template..."
@@ -82,12 +94,13 @@ jobs:
           done
 
       - name: Validate templates
+        working-directory: /tmp/processed-templates
         run: |
           TEMPLATES='${{ steps.detect.outputs.templates }}'
           
           for template in $(echo "$TEMPLATES" | jq -r '.[]'); do
-            echo "Validating /tmp/processed-templates/$template..."
-            omnictl cluster template validate -f "/tmp/processed-templates/$template"
+            echo "Validating $template..."
+            omnictl cluster template validate -f "$template"
           done
 
   sync:
@@ -110,22 +123,30 @@ jobs:
 
       - name: Process template with secrets
         run: |
-          mkdir -p /tmp/processed-templates
+          mkdir -p /tmp/processed-templates/patches
+          
+          # Copy patches directory (these don't need TLD substitution)
+          if [ -d "kubernetes/omni/templates/patches" ]; then
+            cp -r kubernetes/omni/templates/patches/* /tmp/processed-templates/patches/ 2>/dev/null || true
+          fi
+          
           echo "Processing kubernetes/omni/templates/${{ matrix.template }}..."
           # Substitute ${TLD} placeholder with actual value
           sed 's/\${TLD}/${{ secrets.TLD }}/g' "kubernetes/omni/templates/${{ matrix.template }}" > "/tmp/processed-templates/${{ matrix.template }}"
 
       - name: Sync template (dry-run)
         if: github.event.inputs.dry_run == 'true'
+        working-directory: /tmp/processed-templates
         run: |
           echo "Dry-run sync for ${{ matrix.template }}..."
-          omnictl cluster template sync -f "/tmp/processed-templates/${{ matrix.template }}" --dry-run
+          omnictl cluster template sync -f "${{ matrix.template }}" --dry-run
 
       - name: Sync template
         if: github.event.inputs.dry_run != 'true'
+        working-directory: /tmp/processed-templates
         run: |
           echo "Syncing ${{ matrix.template }}..."
-          omnictl cluster template sync -f "/tmp/processed-templates/${{ matrix.template }}"
+          omnictl cluster template sync -f "${{ matrix.template }}"
 
       - name: Verify sync
         if: github.event.inputs.dry_run != 'true'
