fix: cilium-agent privileged mode for Talos

--- a/kubernetes/omni/templates/manifests/install_cilium.yaml
+++ b/kubernetes/omni/templates/manifests/install_cilium.yaml
@@ -891,24 +891,10 @@ spec:
             exec:
               command: ["/cni-uninstall.sh"]
         securityContext:
+          privileged: true
           seLinuxOptions:
             level: s0
             type: spc_t
-          capabilities:
-            add:
-              - CHOWN
-              - KILL
-              - NET_ADMIN
-              - NET_RAW
-              - IPC_LOCK
-              - SYS_MODULE
-              - SYS_ADMIN
-              - SYS_RESOURCE
-              - DAC_OVERRIDE
-              - FOWNER
-              - SETGID
-              - SETUID
-            drop: ["ALL"]
         terminationMessagePolicy: FallbackToLogsOnError
         volumeMounts:
         - name: envoy-sockets
