fix: correct deployment name in kustomize patch

--- a/kubernetes/apps/cloudflared/kustomization.yaml
+++ b/kubernetes/apps/cloudflared/kustomization.yaml
@@ -20,7 +20,7 @@ helmCharts:
 patches:
   - target:
       kind: Deployment
-      name: cloudflared
+      name: cloudflared-cloudflare-tunnel-remote
     patch: |-
       - op: replace
         path: /spec/template/spec/containers/0/env/0/valueFrom/secretKeyRef/name
