--- a/kubernetes/apps/cloudflared/kustomization.yaml
+++ b/kubernetes/apps/cloudflared/kustomization.yaml
@@ -25,3 +25,8 @@ patches:
       - op: replace
         path: /spec/template/spec/containers/0/env/0/valueFrom/secretKeyRef/name
         value: cloudflared-tunnel-token
+      - op: add
+        path: /spec/template/spec/containers/0/env/-
+        value:
+          name: TUNNEL_TRANSPORT_PROTOCOL
+          value: http2
