fix: set explicit MTU 1450 in Cilium to fix QUIC connectivity

--- a/kubernetes/omni/templates/manifests/cilium_manifests.yaml
+++ b/kubernetes/omni/templates/manifests/cilium_manifests.yaml
@@ -155,9 +155,10 @@ data:
   #   - vxlan (default)
   #   - geneve
 
-  routing-mode: "native"
-  auto-direct-node-routes: "true"
-  mtu: "1500"
+  routing-mode: "tunnel"
+  tunnel-protocol: "vxlan"
+  tunnel-source-port-range: "0-0"
+  mtu: "1450"
   service-no-backend-response: "reject"
   policy-deny-response: "none"
 
