--- a/kubernetes/apps/cert-manager/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/kustomization.yaml
@@ -33,7 +33,7 @@ replacements:
 
 helmCharts:
   - name: cert-manager
-    repo: oci://quay.io/jetstack/charts/cert-manager
+    repo: https://charts.jetstack.io
     version: v1.19.2
     releaseName: cert-manager
     namespace: cert-manager
