--- a/kubernetes/apps/traefik/kustomization.yaml
+++ b/kubernetes/apps/traefik/kustomization.yaml
@@ -14,9 +14,9 @@ helmCharts:
     valuesInline:
       ingressRoute:
         dashboard:
-          enabled: true
+          enabled: false
         healthcheck:
-          enabled: true
+          enabled: false
       service:
         type: LoadBalancer
         spec:
