--- a/kubernetes/apps/traefik/kustomization.yaml
+++ b/kubernetes/apps/traefik/kustomization.yaml
@@ -14,9 +14,9 @@ helmCharts:
     valuesInline:
       ingressRoute:
         dashboard:
-          enabled: false
+          enabled: true
         healthcheck:
-          enabled: false
+          enabled: true
       service:
         type: LoadBalancer
         spec:
